added toggle password visibility

--- a/index.html
+++ b/index.html
@@ -36,11 +36,15 @@
                 <i class="fa fa-lock"></i>
               </div>
               <input
+                id="passwordField"
                 type="password"
                 placeholder="Password"
                 onfocus="addBoxShadow('password')"
                 onblur="removeBoxShadow('password')"
               />
+              <div>
+                <i class="fa fa-eye" id="togglePassword"></i>
+              </div>
             </div>
           </div>
           <div id="forgot-password">
